Build now working for J8